New features have been added. Bugs are fixed.

--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Copying a Line Segment</title>
+    <title>Constructing a 30° Angle</title>
 </head>
 <body>
 <nav>
@@ -34,33 +34,23 @@
             <div><a href="9.html">Constructing Tangents Through an External Point</a></div>
         </div>
         <div class="row">
-            <div class="text"><h2 align="center">Copying a Line Segment</h2>
-                <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+            <div class="text"><h2 align="center">Constructing a 30° Angle</h2>
+                <h4>(This demonstration shows how to construct a 30° angle from scratch using a compass and straightedge.)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li>Draw a line segment which will become one side of the angle (Skip this step if you are given this line). The exact length is not important. Label it |AD|. A will be the angle's vertex.
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Set the compass on A, and set its width to any convenient setting.
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Draw a circle across |AD|. Label the point where it crosses |PQ| as point B.
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
+                    <li>Without changing the compass width, move the compass to the point S. Draw a circle that crosses the first one and goes well to the right. Label the point where the two circles cross as point E.
                     </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
+                    <li>Without changing the compass width, move the compass to the point E, and draw an arc across the previous arc, creating point C.
                     </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
+                    <li>Draw a line from A to C.
                     </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
-                    </li>
+                    <li>Done. The angle (DAC) has a measure of 30°</li>
                 </ol>
             </div>
         </div>
