--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Copying a Line Segment</title>
+    <title>Constructing a 60° Angle</title>
 </head>
 <body>
 <nav>
@@ -34,32 +34,21 @@
             <div><a href="9.html">Constructing Tangents Through an External Point</a></div>
         </div>
         <div class="row">
-            <div class="text"><h2 align="center">Copying a Line Segment</h2>
-                <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+            <div class="text"><h2 align="center">Constructing a 60° Angle</h2>
+                <h4>(This demonstration shows how to construct a 60° angle from scratch using a compass and straightedge.)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li>Draw a line segment which will become one side of the angle (Skip this step if you are given this line). The exact length is not important. Label it |AD|.  A will be the angle's vertex.
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Set the compass on A, and set its width to any convenient setting.
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Draw a circle across |AD| and up over above the point A.
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
+                    <li>Without changing the compass width, move the compass to the point where the circle crosses |AD|, and make a circle that crosses the first one.
                     </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
+                    <li>Draw a line from A, through the intersection of the two circles.
                     </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
-                    </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
+                    <li>Done. The angle (DAB) has a measure of 60°.
                     </li>
                 </ol>
             </div>
