--- a/0.html
+++ b/0.html
@@ -24,14 +24,14 @@
         <div class="column">
             <div><a href="0.html">Home</a></div>
             <div><a href="1.html">Copying a Line Segment</a></div>
-            <div><a href="0.html">Constructing a 30° Angle</a></div>
-            <div><a href=".html">Constructing a 60° Angle</a></div>
-            <div><a href=".html">Finding the Center of a Circle</a></div>
-            <div><a href=".html">Constructing Circumcenter of a Triangle</a></div>
-            <div><a href=".html">Constructing an Equilateral Triangle</a></div>
-            <div><a href=".html">Constructing a Perpendicular Bisector of a Line Segment</a></div>
-            <div><a href=".html">Constructing a Perpendicular at the Endpoint of a Ray</a></div>
-            <div><a href=".html">Constructing Tangents Through an External Point</a></div>
+            <div><a href="2.html">Constructing a 30° Angle</a></div>
+            <div><a href="3.html">Constructing a 60° Angle</a></div>
+            <div><a href="4.html">Finding the Center of a Circle</a></div>
+            <div><a href="5.html">Constructing Circumcenter of a Triangle</a></div>
+            <div><a href="6.html">Constructing an Equilateral Triangle</a></div>
+            <div><a href="7.html">Constructing a Perpendicular Bisector of a Line Segment</a></div>
+            <div><a href="8.html">Constructing a Perpendicular at the Endpoint of a Ray</a></div>
+            <div><a href="9.html">Constructing Tangents Through an External Point</a></div>
         </div>
         <div class="row">
             <div class="text"><h2 align="center">Welcome to Discovering Geometry</h2>
