--- a/7.html
+++ b/7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Copying a Line Segment</title>
+    <title>Constructing a Perpendicular Bisector of a Line Segment</title>
 </head>
 <body>
 <nav>
@@ -34,32 +34,21 @@
             <div><a href="9.html">Constructing Tangents Through an External Point</a></div>
         </div>
         <div class="row">
-            <div class="text"><h2 align="center">Copying a Line Segment</h2>
-                <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+            <div class="text"><h2 align="center">Constructing a Perpendicular Bisector of a Line Segment</h2>
+                <h4>(This demonstration shows how to draw a perpendicular bisector of a line segment, using only a compass and straight edge.)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li>Place the compass on one end of the line segment.
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Set the compass width to an approximately two thirds the line length. The actual width does not matter.
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Without changing the compass width, draw a circle.
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
+                    <li>Again without changing the compass width, place the compass point on the other end of the line. Draw a circle so that the arcs cross the first circle.
                     </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
+                    <li>Using a straightedge, draw a line between the points where the circles intersect.
                     </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
-                    </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
+                    <li>This line is perpendicular to the first line and bisects it (cuts it at the exact midpoint of the line).
                     </li>
                 </ol>
             </div>
