--- a/8.html
+++ b/8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Copying a Line Segment</title>
+    <title>Constructing a Perpendicular at the Endpoint of a Ray</title>
 </head>
 <body>
 <nav>
@@ -34,7 +34,7 @@
             <div><a href="9.html">Constructing Tangents Through an External Point</a></div>
         </div>
         <div class="row">
-            <div class="text"><h2 align="center">Copying a Line Segment</h2>
+            <div class="text"><h2 align="center">Constructing a Perpendicular at the Endpoint of a Ray</h2>
                 <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
                     edge.)</h4>
                 <h5>Step by Step Instructions</h5>
