New features have been added. Bugs are fixed.

--- a/0.html
+++ b/0.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="text"><h2 align="center">Welcome to Discovering Geometry</h2>
-                <h4>(Doing geometry is learning geometry.)</h4>
+                <h4>(Doing geometry is learning geometry)</h4>
 
                 Nowadays, Turkish Education System is moving in new directions. Currently, in many classrooms, it is rare for a lesson to be taught to rows of children studiously bent over worksheets, practicing computations, rules, and formulas. Instead, it is more common (I think it will more common) to observe children engaging in a whole-class discussion about what they have discovered, what has been learned. In other words, they construct their own knowledge. Namely, they do geometry instead of dealing with only rules and formulas. They are actively involved in a wide variety of physical and mental actions such as exploring, investigating, patterning, modeling, and verifying.
 
