--- a/1.html
+++ b/1.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="text"><h2 align="center">Copying a Line Segment</h2>
                 <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+                    edge)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
                     <li>Mark a point R that will be one endpoint of the new line
