--- a/3.html
+++ b/3.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="text"><h2 align="center">Constructing a 60° Angle</h2>
-                <h4>(This demonstration shows how to construct a 60° angle from scratch using a compass and straightedge.)</h4>
+                <h4>(This demonstration shows how to construct a 60° angle from scratch using a compass and straightedge)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
                     <li>Draw a line segment which will become one side of the angle (Skip this step if you are given this line). The exact length is not important. Label it |AD|.  A will be the angle's vertex.
