New features have been added. Bugs are fixed.

--- a/4.html
+++ b/4.html
@@ -35,31 +35,16 @@
         </div>
         <div class="row">
             <div class="text"><h2 align="center">Finding the Center of a Circle</h2>
-                <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+                <h4>(This demonstration shows how to find the center of a circle using only a compass and straightedge)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li>Using a straightedge, draw any two chords of the circle. For greatest accuracy, avoid chords that are nearly parallel.
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Construct the perpendicular bisector of one of the chords using the method described in "constructing a perpendicular bisector of a line segment".
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Repeat same drawing for the other chord.
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
-                    </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
-                    </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
-                    </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
+                    <li>The point where the two lines intersect is the center of the circle.
                     </li>
                 </ol>
             </div>
