New features have been added. Bugs are fixed.

--- a/1.html
+++ b/1.html
@@ -55,9 +55,8 @@
                         where the other endpoint will be.
                     </li>
                     <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
+                        of the new line segment. After that draw a line between points.
                     </li>
-                    <li>Draw a line between points.</li>
                     <li>Done. The new line segment is equal in length (congruent
                         to) the line segment |PQ|.
                     </li>
