--- a/5.html
+++ b/5.html
@@ -35,31 +35,18 @@
         </div>
         <div class="row">
             <div class="text"><h2 align="center">Constructing Circumcenter of a Triangle</h2>
-                <h4>(This demonstration shows how to make a copy of a line segment using only a compass and straight
-                    edge.)</h4>
+                <h4>(This demonstration shows how to construct the circumcenter of a triangle using only a compass and straightedge)</h4>
                 <h5>Step by Step Instructions</h5>
                 <ol>
-                    <li>Mark a point R that will be one endpoint of the new line
-                        segment.
+                    <li>Find the bisector of one of the triangle sides. (Firstly, you can examine the "Constructing the Perpendicular Bisector of a Line Segment" part.)
                     </li>
-                    <li>Set the compass point on the point P of the line segment to
-                        be copied.
+                    <li>Repeat the same drawing for the another side.
                     </li>
-                    <li>Adjust the compass width to the point Q. The compass width
-                        is now equal to the length of the line segment PQ.
+                    <li>Mark the point where these two perpendiculars intersect as point O.
                     </li>
-                    <li>Without changing the compass width, place the compass point
-                        on the point R on the line you drew in step-1.
+                    <li>Done. The point O is the circumcenter of the triangle (ABC).
                     </li>
-                    <li>Without changing the compass width, draw an arc roughly
-                        where the other endpoint will be.
-                    </li>
-                    <li>Pick a point on the circle that will be the other endpoint
-                        of the new line segment.
-                    </li>
-                    <li>Draw a line between points.</li>
-                    <li>Done. The new line segment is equal in length (congruent
-                        to) the line segment |PQ|.
+                    <li><em>Note: This point may lie outside the triangle. This is normal.</em>
                     </li>
                 </ol>
             </div>
