New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="charset=utf-8"/>
 
     <title>Matematiğin Aydınlık Dünyası/Ana Sayfa</title>
-
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="mainStyle.css">
 </head>
 
@@ -32,8 +32,9 @@
                     </div>
                 </div>
                 <div class="counter">
-                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-                    <div class="elfsight-app-a11f4f86-d00c-4eb1-b226-2ebf179913ed"></div>
+                    <div>This website has been visited:</div>
+                    <div class="website-counter"></div>
+                    <div>times!</div>
                 </div>
             </div>
         </div>
