New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                     </div>
                 </div>
                 <div class="counter">
-                    <div>This website has been visited:</div>
+                    <div class="statText">Bu siteyi kişisel olarak kaç defa ziyaret ettiğinizi aşağıda görebilirsiniz: </div>
                     <div class="website-counter"></div>
-                    <div>times!</div>
                 </div>
             </div>
         </div>
