New features have been added. Bugs are fixed.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="counter">
-                    <div class="statText">Bu siteyi kişisel olarak kaç defa ziyaret ettiğinizi aşağıda görebilirsiniz: </div>
+                    <div class="statText">Bu siteyi kişisel olarak kaç defa ziyaret ettiğinizi aşağıda görebilirsiniz:<br><br> <span style='font-size:55px;'>&#128640;</span> </div>
                     <div class="website-counter"></div>
                 </div>
             </div>
